<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <EditText
        android:id="@+id/userName"
        android:layout_width="283dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="368dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_baseline_person"
        android:hint="@string/user_hint"
        android:paddingStart="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="283dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="295dp"
        android:background="@drawable/edittext"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="10dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="212dp"
        android:background="@drawable/button"
        android:text="@string/button"
        android:textColor="@color/white"
        app:backgroundTint="#0000ff" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="168dp"
        android:text="@string/forgot"
        android:textColor="#0000ff" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="134dp"
        android:text="@string/text"
        android:textColor="#45454A" />

    <TextView
        android:id="@+id/sign"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="251dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="135dp"
        android:text="@string/signup"
        android:textColor="#0000ff" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="317dp"
        android:layout_height="266dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="54dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="442dp"
        app:srcCompat="@drawable/login" />

    <ImageView
        android:id="@+id/loginFailedImage"
        android:layout_width="91dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginTop="580dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_baseline_tag_faces_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/google"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="69dp"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/linked"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginBottom="69dp"
        app:srcCompat="@drawable/linked" />

    <ImageView
        android:id="@+id/face"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="260dp"
        android:layout_marginBottom="71dp"
        app:srcCompat="@drawable/face" />

</RelativeLayout>